behrend-lion-ambassadors/app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

/* BEGIN CSS RESET */
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/* END CSS RESET */
/* should not need css reset in welcome.scss */

#container {
	width:100%;
}
#search-container {
	background-color:#000000;
	height:35px;
	width:100%;
}

.divider {
	background-color:#50545E;
	height:2px;
	width:100%;
}

#header-container {
	background-color:#262C3A;
	height:135px;
	text-align:center;
	width:100%;
}
#image-container {
	/*background-color:white;*/ /*debug*/

	display:inline-block;
	width:1150px;

	position:relative;
  	top:50%;
  	-ms-transform:translateY(-50%);
  	-webkit-transform:translateY(-50%);
  	transform:translateY(-50%);
}
#image-container img {
	float:left;
}

#contents-container {
	background-color:#2C76C7;
	height:45px;
	/*align ul vertically used method 1 on http://phrogz.net/css/vertical-align/index.html to vertically align the ul*/
	width:100%;
}
#ul-container {
	width:1150px;
}
#ul-container .contents {

}
#ul-container .contents li {
	color:white;
	display:inline-block;	 /*could have used inline, but inline-block looks better when shrinking page horizontally*/
	font-family: "Georgia", Times, serif;
	font-size:1.25em;
	margin:0;
	padding:12px 25px;
}
#ul-container .contents li a {
    display:block;
    height:100%;
    margin:0;
    text-decoration:none;
    width:100%;
}
#ul-container .contents li:hover {
	background-color:#1F4E96;
}
#ul-container .contents li img {
	height:25px;
	width:25px;
}
#ul-container .contents .img li:hover {
	background-color:transparent;
}
#spacer {
	display:inline-block;
	width:100px;
}

#content {
	background-color:#CECDCD;
	text-align:center;
}

#sitemap-footer-container {
	background-color:#262C3A;
	height:400px;
	width:100%;
}

#footer-container {
	background-color:#000000;
	height:125px;
	width:100%;
}

